fix: staticheck issues
